# multimodal-sar-robot

./: .gitignore  README.md  requirements.txt
dashboard/src/: __init__.py  gui_control.py  map_widget.py  mqtt_client.py  radar_widget.py  test_mqtt_publisher.py  test_position_publisher.py
dashboard/src/camera_sub/: CMakeLists.txt  package.xml
dashboard/src/camera_sub/src/: camera_subscriber.cpp
dashboard/src/camera_websocket/: camera_websocket_client.py
dashboard/src/utils/: controller.py
esp32/: sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  centroid_utils.cc  centroid_utils.h  main.cc  main_functions.cc  model_a.cc  model_a.h  model_a.tflite  model_b.cc  model_b.h  model_b.tflite  model_c.cc  model_c.h  model_c.tflite  uart_sender.cc  uart_sender.h
opencr/opencr/: opencr.ino
raspberry-pi/src/camera_pub/: CMakeLists.txt  package.xml
raspberry-pi/src/camera_pub/src/: publisher_camera.cpp
raspberry-pi/src/camera_websocket/: CMakeLists.txt  camera_websocket_server.cpp
raspberry-pi/src/mqtt_bridge/: package.xml  setup.py
raspberry-pi/src/mqtt_bridge/mqtt_bridge/: mqtt_to_micro_ros.py
raspberry-pi/src/mqtt_esp/: main.py
voice-recognition/: record.py
voice-recognition/models/: model.h5  model.tflite  model_cnn_64x64.h5  model_cnn_64x64.tflite  model_quantized.tflite
voice-recognition/notebook/: train_experiment.ipynb
voice-recognition/scripts/: testing.py
voice-recognition/scripts/preprocessing/: audio_to_spectogram.py  sort_audio.py
